# hangman

./: .replit  CMakeLists.txt  Makefile  Timer.h  main  main.cpp  words_alpha_xs.txt
lexicons/: words_en_xs.txt  words_es_xl.txt  words_es_xs.txt
libs/: IWordMap.h  Timer.h  WordMap.cpp  WordMap.h  WordMap_MultiMap.h
src/: Game.cpp  Game.h  ISolver.h  Random.h  Timer.h  WordMap.cpp  WordMap.h
src/solvers/: NoSolver.cpp  NoSolver.h
test/: ctest.h  game_tests.cpp  solver_tests.cpp  test_common.h
